Fix Visual Shift On vexOpen

--- a/sass/vex.sass
+++ b/sass/vex.sass
@@ -75,3 +75,6 @@
 // https://github.com/HubSpot/vex/issues/18
 body.vex-open
     overflow: hidden
+
+.vex-open.vex-scroll
+    margin-right: 15px
